--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,9 +1,6 @@
 [supervisord]
 nodaemon=true
- 
-[program:sshd]
-command=/usr/sbin/sshd -D
- 
+  
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
 priority=900
@@ -12,4 +9,4 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 username=www-data
-autorestart=false
+autorestart=true
