--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,4 +9,4 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 username=www-data
-autorestart=true
+autorestart=false
